# track_me

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEPLOY.md  Dockerfile  PHOTO_SYSTEM_README.md  README.md  REARCH_PLAN.md  entrypoint.sh  main.py  manage.py  pyproject.toml  t
.agents/skills/build-timeline/: SKILL.md
.claude/: settings.json  settings.local.json
.claude/scripts/: format_on_save.py  permission_guard.py
.claude/skills/: build-timeline
.claude/skills/build-timeline/: SKILL.md
.claude/skills/build-timeline/scripts/: build_timeline.py  timeline_lib.py
.github/workflows/: python_build.yaml
cf/: README.md  worker.js  wrangler.toml
docs/: DEDJANGO_PLAN.md  PHASE_3_UI_PLAN.md  SIDECAR_CHANGE_DETECTION.md  test_plan.md
myphoto/: GEOCODING_README.md  PHOTO_PROCESSING_README.md  TASKS_README.md  VALIDATION_README.md  apps.py  models.py  tasks.py  urls.py  views.py
myphoto/docs/: DUPLICATE_DETECTION_README.md  GEOCODING_README.md
myphoto/management/commands/: estimate_geocoding_cost.py  geocode_photos.py  process_photos.py  validate_photos.py
myphoto/migrations/: 0001_initial.py  0002_add_geo_coded_at.py  0003_photo_is_location_manual.py  0004_remove_photo_h3_res_12_remove_photo_h3_res_15_and_more.py
myphoto/services/: geocoding_service.py  photo_processing_service.py  thumbnail_service.py
myphoto/templates/myphoto/: base.html  footprints.html  photo_list.html
places/: apps.py  geocode.py
places/management/commands/: geocode.py
scripts/: README.md  create_test_photos.py  ext.py  regenerate_timelines.py
src/track_me/: cli.py  config.py  db.py  schema.sql  search.py  storage.py  thumbnails.py  timeline.py
src/track_me/ingest/: exif.py  matcher.py  pipeline.py  sidecar.py
src/track_me/viewer/: app.py  auth.py
src/track_me/viewer/templates/: build.html  index.html  map.html
tests/: conftest.py  settings.py  test_auth.py  test_db.py  test_exif.py  test_export.py  test_geocode.py  test_geocoding.py  test_ingest_pipeline.py  test_me.py  test_photo_grid_ui.py  test_photo_processing.py  test_search.py  test_sidecar.py  test_sidecar_matcher.py  test_sidecar_realworld.py  test_smart_search.py  test_storage.py  test_timeline.py  test_viewer_api.py  test_views.py
tests/fixtures/: test_photos.csv
tests/fixtures/sidecars/: DSCN0471_2.JPG.supplemental-metadata.json  DSCN0472.JPG.supplemental-metadata.json  DSCN0473.JPG.supplemental-metadata.json  DSCN0474.JPG.supplemental-metadata.json  LOCATED_EXAMPLE.jpg.supplemental-metadata.json
tests/fixtures/truncated/: PXL_20250102_042225386-COLLAGE.jpg.supplementa.json
tests/test_photos/2020/01/: IMG_4584.HEIC
track_me/: api.py  asgi.py  cli.py  config.py  db.py  schema.sql  settings.py  urls.py  wsgi.py
viewer/: app.py
