[project]
name = "track_me"
version = "0.1.0"
description = "Local-first tool that turns Google Takeout photo exports into a queryable travel timeline"
authors = [{ name = "Li Lin", email = "guru.lin@gmail.com" }]
readme = "README.md"

requires-python = ">= 3.12"
dependencies = [
    "dateparser>=1.2.2",
    "dj-database-url>=3.0.1",
    "django>=5.2",
    "django-ninja>=1.6.2",
    "django-tailwind-cli>=4.4.2",
    "flask>=3.1.3",
    "googlemaps>=4.10.0",
    "gunicorn>=23.0.0",
    "h3>=4.3.1",
    "imagehash>=4.3.2",
    "pillow>=12.0.0",
    "pillow-heif>=1.1.1",
    "psycopg>=3.3.2",
    "pydantic>=2.13.4",
    "python-dotenv >= 1.1.1",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "reverse-geocoder>=1.5.1",
    "timezonefinder>=8.2.4",
    "whitenoise>=6.11.0",
]

[project.scripts]
track-me = "track_me.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["track_me", "library", "places"]


[dependency-groups]
dev = [
    "pytest >= 8.3.0",
    "pytest-dotenv >= 0.5.2",
    "pytest-mock >= 3.14",
    "pytest-cov >= 6.1",
    "pre-commit >= 4.0.1",
    "ruff >= 0.15.20",
    "pytest-django>=4.11.1",
    "django-stubs>=5.2",
    "playwright>=1.55.0",
    "ty>=0.0.55",
    "pytest-playwright>=0.7.2",
    "pytest-asyncio>=1.3.0",
]

[tool.uv]
managed = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
pythonpath = ["."]
DJANGO_SETTINGS_MODULE = "tests.settings"
filterwarnings = [
    "ignore::DeprecationWarning",
]
env_files = [".env"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "playwright: Playwright browser UI tests; run only on macOS (auto-skipped on CI/Linux)",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
]

# see ruff configuration options at
# https://docs.astral.sh/ruff/configuration/

[tool.ruff]
line-length = 98
indent-width = 4
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "*/migrations/*",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "C",
    "I",
    "A",
] # Enable checks for PEP8, imports, and other standard rules
ignore = ["E203", "E266", "C901"]

[tool.ty.environment]
python-version = "3.12"
