[project]
name = "track_me"
version = "0.1.0"
description = "Local-first tool that turns Google Takeout photo exports into a queryable travel timeline"
authors = [{ name = "Li Lin", email = "guru.lin@gmail.com" }]
readme = "README.md"

requires-python = ">= 3.13"
dependencies = [
    "boto3>=1.43.40",
    "dateparser>=1.2.2",
    "flask>=3.1.3",
    "googlemaps>=4.10.0",
    "gunicorn>=26.0.0",
    "h3>=4.3.1",
    "imagehash>=4.3.2",
    "pillow>=12.0.0",
    "pillow-heif>=1.1.1",
    "pydantic>=2.13.4",
    "pyjwt[crypto]>=2.9",
    "python-dotenv >= 1.1.1",
    "timezonefinder>=8.2.4",
]

[project.scripts]
track-me = "track_me.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/track_me"]


[dependency-groups]
dev = [
    "pytest >= 8.3.0",
    "pytest-cov >= 6.1",
    "pre-commit >= 4.0.1",
    "ruff>=0.15.21",
    "ty>=0.0.59",
]

[tool.uv]
managed = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
]

# see ruff configuration options at
# https://docs.astral.sh/ruff/configuration/

[tool.ruff]
line-length = 98
indent-width = 4
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "*/migrations/*",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "C",
    "I",
    "A",
] # Enable checks for PEP8, imports, and other standard rules
ignore = ["E203", "E266", "C901"]

[tool.ty.environment]
python-version = "3.13"
